gatekeeper/constraint_template.yml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: hostvalidation
spec:
  crd:
    spec:
      names:
        kind: HostValidation
      validation:
        openAPIV3Schema:
          type: object
          properties:
            label:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package hostvalidation
         violation[{"msg": msg}] {
           input.review.object.kind == "Ingress"
           host := input.review.object.spec.rules[_].host
           not endswith(host, ".blahcom")
           msg := sprintf("Ingress host %s does not end with 'blah.com'", [host])
         }
